<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_allguests">Lista de Convidados</string>
    <string name="menu_presentguests">Convidados Presentes</string>
    <string name="menu_absentguests">Convidados Ausentes</string>
    <string name="text_guestName">Nome do Convidado</string>
    <string name="hint_name">Nome</string>
    <string name="rb_present">Presente</string>
    <string name="rb_absent">Ausente</string>
    <string name="button_save">SALVAR</string>
    <string name="not_confirmed">Não confirmado</string>
    <string name="confirmed">Confirmação</string>
    <string name="cancel">Cancelar</string>
    <string name="remove_guest">Remoção de convidado</string>
    <string name="ask_remove">Deseja remover convidado da lista?</string>
    <string name="remove">Remover</string>
    <string name="success_revomed">Convidado removido com sucesso.</string>
    <string name="total">Total</string>
</resources>