<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_allguests">

    <fragment
        android:id="@+id/nav_allguests"
        android:name="curso.kotlin.convidados.view.AllGuestsFragment"
        android:label="@string/menu_allguests"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_presentguests"
        android:name="curso.kotlin.convidados.view.PresentGuestsFragment"
        android:label="@string/menu_presentguests"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_absentguests"
        android:name="curso.kotlin.convidados.view.AbsentGuestsFragment"
        android:label="@string/menu_absentguests"
        tools:layout="@layout/fragment_slideshow" />
</navigation>