<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.GuestFormularyActivity">

    <TextView
        android:id="@+id/text_guest_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_guestName"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_guest_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_guest_name" />

    <RadioGroup
        android:id="@+id/radio_group_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_guest_name">

        <RadioButton
            android:id="@+id/radio_present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_present"
            android:textColor="@color/green" />

        <RadioButton
            android:id="@+id/radio_absent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_absent"
            android:textColor="@color/red" />

    </RadioGroup>

    <Button
        android:id="@+id/bttn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>